﻿fix(coverage): make JaCoCo actually collect data, and add a ratchet
Coverage has never been measured in this repository. Two independent defects
meant every run reported success with zero data:

  1. Surefire's <argLine> was hardcoded to the --add-opens flags, which replaces
     the argLine property that JaCoCo publishes its -javaagent through. The agent
     was never attached, so the build logged "Skipping JaCoCo execution due to
     missing execution data file" while the tests themselves passed and reported
     normal counts. Fixed by interpolating @{argLine} ahead of the opens.

  2. The CI step that collected coverage ran
       ./mvnw ... verify -Djacoco.skip=false -DskipTests
     -DskipTests means no execution data is produced, so that step could never
     have worked either. Coverage is now collected by the unit-test step itself
     and reported in a following jacoco:report step, then uploaded as an artifact.

Because jacoco:check also skips when there is no data, the configured 0.00
thresholds were never evaluated - the gate was inert rather than passing.

Measured coverage once it works (JDK 17, unit tests only)

  flink-compat       LINE 79.5%  (35/44)
  cdc-mysql-sync     LINE 32.2%  (331/1028)   BRANCH 28.3%
  flink-demo         LINE 27.7%  (486/1752)   BRANCH 28.5%
  cdc-paimon-sync    LINE 15.5%  (34/220)     BRANCH 36.0%

These differ from the numbers previously recorded in
docs/reliability/coverage-report.md (which claimed 10.1% / 100% / 0%); that report
was based on the broken setup and has been rewritten with the measured values and
an explanation of why the old ones were meaningless.

Thresholds: a ratchet, not a target

  jacoco.line.min   0.15
  jacoco.branch.min 0.25

Set just below today's lowest module so the gate catches a regression - a new
class landing with no tests - without blocking legitimate work. JaCoCo applies the
BUNDLE rule per module and the modules span 15%-80%, so one shared floor is used
and a module can override it in